--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -156,7 +156,7 @@ jobs:
         shell: cmd
 
       - name: Build the app (debug)
-        if: ${{ env.IS_MAIN == 'true' }}
+        if: ${{ env.IS_RELEASE == 'false' && env.IS_NIGHTLY == 'false' }}
         # electron-builder doesn't have a concept of release vs debug,
         # this is just not doing any codesign or release yml generation
         run: yarn electron-builder --config
