--- a/.github/workflows/build-test-publish-apps.yml
+++ b/.github/workflows/build-test-publish-apps.yml
@@ -14,6 +14,7 @@ on:
 
 env:
   CUT_RELEASE_PR: ${{ github.event_name == 'pull_request' && (contains(github.event.pull_request.title, 'Cut release v')) }}
+  NIGHTLY: ${{ github.event_name == 'schedule' }}
   BUILD_RELEASE: ${{ github.event_name == 'release' || github.event_name == 'schedule' || github.event_name == 'pull_request' && (contains(github.event.pull_request.title, 'Cut release v')) }}
   NOTES: ${{ github.event_name == 'release' && github.event.release.body || format('Non-release build, commit {0}', github.sha) }}
 
@@ -47,12 +48,9 @@ jobs:
       - name: Run build:wasm
         run: "yarn build:wasm"
 
-      - name: Set nightly version
-        if: github.event_name == 'schedule'
-        run: |
-          VERSION=$(date +'%-y.%-m.%-d') yarn bump-jsons
-
-      # TODO: see if we need to inject updater nightly URL here https://dl.zoo.dev/releases/modeling-app/nightly/last_update.json
+      - name: Set nightly version, product name, and icons
+        if: ${{ env.NIGHTLY == 'true' }}
+        run: yarn files:flip-to-nightly
 
       - name: Generate release notes
         run: |
@@ -64,23 +62,14 @@ jobs:
           name: prepared-files
           path: |
             package.json
+            electron-builder.yml
             src/wasm-lib/pkg/wasm_lib*
             release-notes.md
+            assets/icon.ico
+            assets/icon.png
 
       - id: export_version
         run: echo "version=`cat package.json | jq -r '.version'`" >> "$GITHUB_OUTPUT"
-
-      - name: Prepare electron-builder.yml file for nightly
-        if: ${{ github.event_name == 'schedule' }}
-        run: |
-          yq -i '.publish[0].url = "https://dl.zoo.dev/releases/modeling-app/nightly"' electron-builder.yml
-
-      - uses: actions/upload-artifact@v3
-        if: ${{ github.event_name == 'schedule' }}
-        with:
-          name: prepared-files-nightly
-          path: |
-            electron-builder.yml
 
       - name: Prepare electron-builder.yml file for updater test
         if: ${{ env.CUT_RELEASE_PR == 'true' }}
@@ -109,7 +98,6 @@ jobs:
             platform: linux
     runs-on: ${{ matrix.os }}
     env:
-      VERSION: ${{ github.event_name == 'schedule' && needs.prepare-files.outputs.version || format('v{0}', needs.prepare-files.outputs.version) }}
       VERSION_NO_V: ${{ needs.prepare-files.outputs.version }}
     steps:
       - uses: actions/checkout@v4
@@ -121,20 +109,13 @@ jobs:
         run: |
           ls -R prepared-files
           cp prepared-files/package.json package.json
+          cp prepared-files/electron-builder.yml electron-builder.yml
           cp prepared-files/src/wasm-lib/pkg/wasm_lib_bg.wasm public
           mkdir src/wasm-lib/pkg
           cp prepared-files/src/wasm-lib/pkg/wasm_lib* src/wasm-lib/pkg
           cp prepared-files/release-notes.md release-notes.md
-
-      - uses: actions/download-artifact@v3
-        if: ${{ github.event_name == 'schedule' }}
-        name: prepared-files-nightly
-
-      - name: Copy updated electron-builder.yml file for nightly build
-        if: ${{ github.event_name == 'schedule' }}
-        run: |
-          ls -R prepared-files-nightly
-          cp prepared-files-nightly/electron-builder.yml electron-builder.yml
+          cp prepared-files/assets/icon.ico assets/icon.ico
+          cp prepared-files/assets/icon.png assets/icon.png
 
       - name: Sync node version and setup cache
         uses: actions/setup-node@v4
@@ -274,7 +255,7 @@ jobs:
     needs: [prepare-files, build-apps]
     env:
       VERSION_NO_V: ${{ needs.prepare-files.outputs.version }}
-      VERSION: ${{ github.event_name == 'schedule' && needs.prepare-files.outputs.version || format('v{0}', needs.prepare-files.outputs.version) }}
+      VERSION: ${{ format('v{0}', needs.prepare-files.outputs.version) }}
       PUB_DATE: ${{ github.event_name == 'release' && github.event.release.created_at || github.event.repository.updated_at }}
       BUCKET_DIR: ${{ github.event_name == 'schedule' && 'dl.kittycad.io/releases/modeling-app/nightly' || 'dl.kittycad.io/releases/modeling-app' }}
       WEBSITE_DIR: ${{ github.event_name == 'schedule' && 'dl.zoo.dev/releases/modeling-app/nightly' || 'dl.zoo.dev/releases/modeling-app' }}
