--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -193,7 +193,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: ${{ env.IS_RELEASE == 'true' || env.IS_NIGHTLY == 'true' }}
         with:
-          name: out-yml
+          name: out-yml-${{ matrix.platform }}
           path: |
             out/latest*.yml
 
@@ -271,12 +271,22 @@ jobs:
 
       - uses: actions/download-artifact@v4
         with:
+          name: out-yml-win
+          path: out
+
+      - uses: actions/download-artifact@v4
+        with:
           name: out-arm64-mac
           path: out
 
       - uses: actions/download-artifact@v4
         with:
           name: out-x64-mac
+          path: out
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: out-yml-mac
           path: out
 
       - uses: actions/download-artifact@v4
@@ -291,7 +301,7 @@ jobs:
 
       - uses: actions/download-artifact@v4
         with:
-          name: out-yml
+          name: out-yml-linux
           path: out
 
       - name: Generate the download static endpoint
