--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -395,6 +395,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           path: out
+          merge-multiple: true
 
       - name: List artifacts
         run: "ls -R out"
