--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -6,16 +6,16 @@ on:
     branches:
       - main
     tags:
-      - 'v*'
+      - 'v[0-9]+.[0-9]+.[0-9]+'
   schedule:
     - cron: '0 4 * * *'
   # Daily at 04:00 AM UTC
   # Will checkout the last commit from the default branch (main as of 2023-10-04)
 
 env:
-  IS_RELEASE: ${{ github.ref_type == 'tag' }}
-  # IS_NIGHTLY: ${{ github.event_name == 'schedule' }}
-  IS_NIGHTLY: true
+  # IS_RELEASE: ${{ github.ref_type == 'tag' }}
+  IS_RELEASE: true
+  IS_NIGHTLY: ${{ github.event_name == 'schedule' }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -54,8 +54,7 @@ jobs:
       - name: Set release version
         if: ${{ env.IS_RELEASE == 'true' }}
         run: |
-          TAG=${{ github.ref_name }}
-          export VERSION=${TAG#v}
+          export VERSION=${GITHUB_REF_NAME#v}
           yarn json:set-version
 
       - uses: actions/upload-artifact@v4
