--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -54,8 +54,9 @@ jobs:
       - name: Set release version
         if: ${{ env.IS_RELEASE == 'true' }}
         run: |
+          GITHUB_REF_NAME=v1.2.3
           export VERSION=${GITHUB_REF_NAME#v}
-          yarn json:set-version
+          yarn files:set-version
 
       - uses: actions/upload-artifact@v4
         with:
