--- a/src/wasm-lib/justfile
+++ b/src/wasm-lib/justfile
@@ -15,6 +15,14 @@ redo-kcl-stdlib-docs:
     TWENTY_TWENTY=overwrite {{cnr}} -p kcl-lib kcl_test_example
     EXPECTORATE=overwrite {{cnr}} -p kcl-lib docs::gen_std_tests::test_generate_stdlib
 
+
+# Copy a test KCL file from executor tests into a new simulation test.
+copy-exec-test-into-sim-test test_name:
+    mkdir -p kcl/tests/{{test_name}}
+    cp tests/executor/inputs/{{test_name}}.kcl kcl/tests/{{test_name}}/input.kcl
+    zoo kcl fmt -w kcl/tests/{{test_name}}/input.kcl
+    just new-sim-test {{test_name}}
+
 # Create a new KCL deterministic simulation test case.
 new-sim-test test_name render_to_png="true":
     # Add the various tests for this new test case.
