--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -13,7 +13,8 @@ on:
   # Will checkout the last commit from the default branch (main as of 2023-10-04)
 
 env:
-  IS_RELEASE: ${{ github.ref_type == 'tag' }}
+  # IS_RELEASE: ${{ github.ref_type == 'tag' }}
+  IS_RELEASE: true
   IS_NIGHTLY: ${{ github.event_name == 'schedule' }}
 
 concurrency:
@@ -25,6 +26,7 @@ jobs:
     runs-on: ubuntu-22.04  # seperate job on Ubuntu for easy string manipulations (compared to Windows)
     outputs:
       version: ${{ steps.export_version.outputs.version }}
+      notes: ${{ steps.export_notes.outputs.notes }}
     steps:
       - uses: actions/checkout@v4
 
@@ -69,6 +71,9 @@ jobs:
 
       - id: export_version
         run: echo "version=`cat package.json | jq -r '.version'`" >> "$GITHUB_OUTPUT"
+
+      - id: export_notes
+        run: echo "notes=`cat release-notes.md`" >> "$GITHUB_OUTPUT"
 
       - name: Prepare electron-builder.yml file for updater test
         if: ${{ env.IS_RELEASE == 'true' }}
@@ -252,15 +257,8 @@ jobs:
     runs-on: ubuntu-22.04
     permissions:
       contents: write
-    if: ${{ github.ref_type == 'tag' || github.event_name == 'schedule' }}
+    # if: ${{ github.ref_type == 'tag' || github.event_name == 'schedule' }}
     needs: [prepare-files, build-apps]
-    env:
-      VERSION_NO_V: ${{ needs.prepare-files.outputs.version }}
-      VERSION: ${{ format('v{0}', needs.prepare-files.outputs.version) }}
-      PUB_DATE: ${{ github.event.repository.updated_at }}
-      BUCKET_DIR: ${{ github.event_name == 'schedule' && 'dl.kittycad.io/releases/modeling-app/nightly' || 'dl.kittycad.io/releases/modeling-app' }}
-      WEBSITE_DIR: ${{ github.event_name == 'schedule' && 'dl.zoo.dev/releases/modeling-app/nightly' || 'dl.zoo.dev/releases/modeling-app' }}
-      URL_CODED_NAME: ${{ github.event_name == 'schedule' && 'Zoo%20Modeling%20App%20%28Nightly%29' || 'Zoo%20Modeling%20App' }}
     steps:
       - uses: actions/checkout@v4
 
@@ -310,6 +308,13 @@ jobs:
           path: out
 
       - name: Generate the download static endpoint
+        env:
+          NOTES: ${{ needs.prepare-files.outputs.notes }}
+          VERSION_NO_V: ${{ needs.prepare-files.outputs.version }}
+          VERSION: ${{ format('v{0}', needs.prepare-files.outputs.version) }}
+          PUB_DATE: ${{ github.event.repository.updated_at }}
+          WEBSITE_DIR: ${{ github.event_name == 'schedule' && 'dl.zoo.dev/releases/modeling-app/nightly' || 'dl.zoo.dev/releases/modeling-app' }}
+          URL_CODED_NAME: ${{ github.event_name == 'schedule' && 'Zoo%20Modeling%20App%20%28Nightly%29' || 'Zoo%20Modeling%20App' }}
         run: |
           RELEASE_DIR=https://${WEBSITE_DIR}
           jq --null-input \
@@ -357,42 +362,42 @@ jobs:
       - name: List artifacts
         run: "ls -R out"
 
-      - name: Authenticate to Google Cloud
-        if: ${{ env.IS_NIGHTLY == 'true' }}
-        uses: 'google-github-actions/auth@v2.1.7'
-        with:
-          credentials_json: '${{ secrets.GOOGLE_CLOUD_DL_SA }}'
+      # - name: Authenticate to Google Cloud
+      #   if: ${{ env.IS_NIGHTLY == 'true' }}
+      #   uses: 'google-github-actions/auth@v2.1.7'
+      #   with:
+      #     credentials_json: '${{ secrets.GOOGLE_CLOUD_DL_SA }}'
 
-      - name: Set up Google Cloud SDK
-        if: ${{ env.IS_NIGHTLY == 'true' }}
-        uses: google-github-actions/setup-gcloud@v2.1.2
-        with:
-          project_id: ${{ env.GOOGLE_CLOUD_PROJECT_ID }}
+      # - name: Set up Google Cloud SDK
+      #   if: ${{ env.IS_NIGHTLY == 'true' }}
+      #   uses: google-github-actions/setup-gcloud@v2.1.2
+      #   with:
+      #     project_id: ${{ env.GOOGLE_CLOUD_PROJECT_ID }}
 
-      - name: Upload nightly files to public bucket
-        if: ${{ env.IS_NIGHTLY == 'true' }}
-        uses: google-github-actions/upload-cloud-storage@v2.2.1
-        with:
-          path: out
-          glob: '*'
-          parent: false
-          destination: ${{ env.BUCKET_DIR }}
+      # - name: Upload nightly files to public bucket
+      #   if: ${{ env.IS_NIGHTLY == 'true' }}
+      #   uses: google-github-actions/upload-cloud-storage@v2.2.1
+      #   with:
+      #     path: out
+      #     glob: '*'
+      #     parent: false
+      #     destination: 'dl.kittycad.io/releases/modeling-app/nightly'
 
-      - name: Create draft release
-        uses: softprops/action-gh-release@v2
-        if: ${{ env.IS_RELEASE == 'true' }}
-        with:
-          # TODO: fetch previous tag
-          body: |
-            ## Changed
-            * ...
+      # - name: Create draft release
+      #   uses: softprops/action-gh-release@v2
+      #   if: ${{ env.IS_RELEASE == 'true' }}
+      #   with:
+      #     # TODO: fetch previous tag
+      #     body: |
+      #       ## Changed
+      #       * ...
 
-            ## Added
-            * ...
+      #       ## Added
+      #       * ...
 
-            ## Fixed
-            * ...
+      #       ## Fixed
+      #       * ...
 
-            **Full Changelog**: https://github.com/KittyCAD/modeling-app/compare/{BEFORE}...${{ github.ref_name }}
-          draft: true
-          files: 'out/Zoo*'
+      #       **Full Changelog**: https://github.com/KittyCAD/modeling-app/compare/{BEFORE}...${{ github.ref_name }}
+      #     draft: true
+      #     files: 'out/Zoo*'
