Add github-token to all download-artifact steps

--- a/.github/workflows/publish-apps-release.yml
+++ b/.github/workflows/publish-apps-release.yml
@@ -38,54 +38,63 @@ jobs:
           name: out-x64-win
           path: out
           run-id: ${{ steps.tag_workflow_id.outputs.id }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/download-artifact@v4
         with:
           name: out-yml-win
           path: out
           run-id: ${{ steps.tag_workflow_id.outputs.id }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/download-artifact@v4
         with:
           name: out-arm64-mac
           path: out
           run-id: ${{ steps.tag_workflow_id.outputs.id }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/download-artifact@v4
         with:
           name: out-x64-mac
           path: out
           run-id: ${{ steps.tag_workflow_id.outputs.id }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/download-artifact@v4
         with:
           name: out-yml-mac
           path: out
           run-id: ${{ steps.tag_workflow_id.outputs.id }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/download-artifact@v4
         with:
           name: out-arm64-linux
           path: out
           run-id: ${{ steps.tag_workflow_id.outputs.id }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/download-artifact@v4
         with:
           name: out-x64-linux
           path: out
           run-id: ${{ steps.tag_workflow_id.outputs.id }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/download-artifact@v4
         with:
           name: out-yml-linux
           path: out
           run-id: ${{ steps.tag_workflow_id.outputs.id }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/download-artifact@v4
         with:
           name: out-download-json
           path: out
           run-id: ${{ steps.tag_workflow_id.outputs.id }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: List artifacts
         run: ls -R out
