--- a/src/wasm-lib/justfile
+++ b/src/wasm-lib/justfile
@@ -28,8 +28,7 @@ new-sim-test test_name render_to_png="true":
     # Add the various tests for this new test case.
     cat kcl/tests/simtest.tmpl | sed "s/TEST_NAME_HERE/{{test_name}}/" | sed "s/RENDER_TO_PNG/{{render_to_png}}/" >> kcl/src/simulation_tests.rs
     # Run all the tests for the first time, in the right order.
-    {{cita}} -p kcl-lib -- tests::{{test_name}}::tokenize
-    {{cita}} -p kcl-lib -- tests::{{test_name}}::parse
-    {{cita}} -p kcl-lib -- tests::{{test_name}}::unparse
+    {{cita}} -p kcl-lib -- simulation_tests::{{test_name}}::parse
+    {{cita}} -p kcl-lib -- simulation_tests::{{test_name}}::unparse
     TWENTY_TWENTY=overwrite {{cita}} -p kcl-lib -- tests::{{test_name}}::kcl_test_execute
 
