fix: add deb option and required packages to linux electron builder section

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -63,12 +63,28 @@ linux:
       arch:
         - x64
         - arm64
+    - target: deb
+      arch:
+        - x64
+        - arm64
   fileAssociations:
     - ext: kcl
       name: kcl
       mimeType: text/vnd.zoo.kcl
       description: Zoo KCL File
       role: Editor
+deb:
+  depends:
+    - zlib1g-dev
+    - libfuse2
+    - libnss3
+    - libatk1.0-0
+    - libatk-bridge2.0-0
+    - libcups2
+    - libgtk-3-0
+    - libgbm-dev
+    - libasound2
+    - xdg-utils
 publish:
   - provider: generic
     url: https://dl.zoo.dev/releases/modeling-app
